# gemini-cli-mcp

./: AGENTS.md  Cargo.toml  README.md  opencode.jsonc
.github/workflows/: main.yml
src/: config.rs  error.rs  lib.rs  main.rs  server.rs  types.rs
src/gemini/: events.rs  process.rs
