[package]
name = "gemini-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server that proxies tasks to the system gemini CLI"
license = "Apache-2.0"
keywords = ["mcp", "gemini", "cli", "agent", "rmcp"]

[[bin]]
name = "gemini-mcp-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
rmcp = { version = "1.2.0", features = ["server", "transport-io", "macros"] }
schemars = "1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.24"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[lints.clippy]
uninit_assumed_init = "deny"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
perf = { level = "warn", priority = -1 }
manual_string_new = "warn"
all = { level = "warn", priority = -1 }
